# PDFtoSlidesb

./: README.md  app.py  base.html  converter.py  index.html  pyproject.toml  requirements.txt  script.js  style.css
